if (mContext != null) mContext.unbindService(mServiceConn); should be changed to this.
            if (mContext != null && mService != null) mContext.unbindService(mServiceConn);

--- a/app/src/main/res/layout/fragment_dialog_subscribe.xml
+++ b/app/src/main/res/layout/fragment_dialog_subscribe.xml
@@ -53,9 +53,9 @@
 
 
 
-<!--
+
         <TextView
-            android:id="@+id/textabout"
+            android:id="@+id/earlyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -80,7 +80,7 @@
             android:layout_marginBottom="30dp"
             android:textColor="#84c380"
             android:textSize="12dp" />
--->
+
 
     </LinearLayout>
 
