--- a/app/src/main/res/layout-sw600dp-land/fragment_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_main.xml
@@ -66,6 +66,7 @@
             android:layout_gravity="center_horizontal">
 
             <ImageView
+                android:id="@+id/firstImage"
                 android:layout_width="500dp"
                 android:layout_height="600dp"
                 android:src="@drawable/book3cover"
@@ -77,7 +78,7 @@
                 android:orientation="horizontal"
                 android:weightSum="1">
                 <TextView
-                    android:id="@+id/primary"
+                    android:id="@+id/h1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/book1heading1"
@@ -109,6 +110,49 @@
             android:padding="10dp"
             android:layout_marginLeft="100dp"
             android:layout_marginRight="100dp"/>
+
+        <LinearLayout
+            android:id="@+id/layout_sub"
+            android:layout_width="500dp"
+            android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
+            android:orientation="vertical"
+            android:background="#ffffff"
+            android:layout_gravity="center_horizontal">
+
+
+            <ImageView
+                android:id="@+id/subImage"
+                android:layout_width="500dp"
+                android:layout_height="600dp"
+                android:src="@drawable/b03isocover"
+                android:adjustViewBounds="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sub_this_week"
+                android:background="#e27cde"
+                android:layout_marginTop="-40dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:paddingRight="10dp"
+                />
+
+
+            <TextView
+                android:id="@+id/h1sub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/book1heading1"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:paddingTop="10dp"
+                android:textColor="#3c3c3c"
+                android:layout_marginTop="5dp"
+                />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/monday3"
