--- a/app/src/main/res/layout-sw600dp-land/fragment_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_main.xml
@@ -193,6 +193,7 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:id="@+id/freeImage1"
                             android:layout_width="match_parent"
                             android:layout_height="370dp"
                             android:src="@drawable/ma3_4head17" />
@@ -235,7 +236,7 @@
                         android:weightSum="1">
 
                         <TextView
-                            android:id="@+id/primary"
+                            android:id="@+id/freeH1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="The Head"
