--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -182,6 +182,7 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:id="@+id/freeImage1"
                             android:layout_width="match_parent"
                             android:layout_height="270dp"
                             android:src="@drawable/b08t02p05" />
@@ -225,7 +226,7 @@
                     android:weightSum="1">
 
                     <TextView
-                        android:id="@+id/primary"
+                        android:id="@+id/freeH1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="The Head"
