--- a/app/src/main/res/values/books.xml
+++ b/app/src/main/res/values/books.xml
@@ -360,6 +360,42 @@
     </string-array>
 
 
+
+    <!-- *** *** *** *** ****** *** *** *** *** *** -->
+    <!-- *** *** *** *** BOOK 11 *** *** *** *** *** -->
+    <!-- *** *** *** *** ****** *** *** *** *** *** -->
+
+    <array name="book11Build">
+        <item>@string/book11heading1</item>
+        <item>@string/book11heading2</item>
+        <item>@drawable/book11cover</item>
+        <item>@array/book11cardtext1</item>
+        <item>@array/book11cardimages</item>
+        <item>@array/book11PageIds</item>
+        <item>@drawable/b11banner</item>
+        <item>@string/book11</item>
+        <item>@string/book11level</item>
+    </array>
+
+    <string name="book11">book11</string>
+    <string name="book11level">Level 1</string>
+    <drawable name="book11cover">@drawable/b11banner</drawable>
+    <drawable name="book11coverinside">@drawable/b11isocover</drawable>
+
+    <integer-array name="book11cardimages">
+        <item>@drawable/b11t01p30</item>
+        <item>@drawable/b11t02p24</item>
+
+
+    </integer-array>
+    <string-array name="book11PageIds">
+        <item>b11t01</item>
+        <item>b11t02</item>
+    </string-array>
+
+
+
+
     <!--all pages level-->
     <!--all pages level-->
     <!--all pages level-->
@@ -427,6 +463,9 @@
         <item>Level 2</item>
         <item>Level 2</item>
         <item>Level 2</item>
+
+        <item>Level 1</item> <!--b11t01-->
+        <item>Level 1</item>
     </string-array>
 
 
@@ -481,7 +520,7 @@
         <item>@drawable/b08t06p05</item>
         <item>@drawable/b08t07p05</item>
         <item>@drawable/b08t08p05</item>
-        <item>@drawable/b10t01p19</item> <!--b10t01--> Copy these for above
+        <item>@drawable/b10t01p19</item> <!--b10t01  -->
         <item>@drawable/b10t02p20</item>
         <item>@drawable/b10t03p21</item>
         <item>@drawable/b10t04p20</item>
@@ -489,6 +528,8 @@
         <item>@drawable/b10t06p20</item>
         <item>@drawable/b10t07p20</item>
         <item>@drawable/b10t08p20</item>
+        <item>@drawable/b11t01p30</item> <!--b11t01  -->
+        <item>@drawable/b11t02p24</item>
     </integer-array>
 
     <!--for third Fragment-->
@@ -551,6 +592,8 @@
         <item>b10t06</item>
         <item>b10t07</item>
         <item>b10t08</item>
+        <item>b11t01</item>
+        <item>b11t02</item>
     </string-array>
 
     <string-array name="pagesAllbooks">
@@ -620,6 +663,9 @@
         <item>book10</item>
         <item>book10</item>
         <item>book10</item>
+
+        <item>book11</item>
+        <item>book11</item>
     </string-array>
 
 
@@ -633,6 +679,7 @@
         <item>@drawable/b07isocover</item>
         <item>@drawable/b08isocover</item>
         <item>@drawable/b10isocover</item>
+        <item>@drawable/b11isocover</item>
     </integer-array>
 
     <string-array name="allBooksIds">
@@ -655,6 +702,7 @@
         <item>book07</item>
         <item>book08</item>
         <item>book10</item>
+        <item>book11</item>
     </string-array>
 
 </resources>
